--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,14 @@
   "manifest_version": 2,
   "name": "FRHSD GPA Calculator",
   "description": "FRHSD GPA Calculator",
-  "version": "1.0",
+  "version": "1.01",
   "author": "Tyler Wolf",
   "permissions": [
     "activeTab"
   ],
   "content_scripts": [
     {
-      "matches": ["https://parents.frhsd.com/genesis/parents?tab1=studentdata&tab2=gradebook&tab3=weeklysummary"],
+      "matches": ["https://parents.frhsd.com/genesis/parents?tab1=studentdata&tab2=gradebook&tab3=weeklysummary&*"],
       "js": ["./src/jquery.min.js", "./src/content-script.js"],
       "run_at": "document_end"
 
