--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "FRHSD GPA Calculator",
   "description": "Calculate your GPA from the FRHSD parent portal",
-  "version": "2.1",
+  "version": "2.2",
   "author": "Tyler Wolf",
   "permissions": [
     "activeTab"
@@ -19,5 +19,10 @@
     "default_icon": "./images/icon.png",
     "default_title": "FRHSD GPA Calculator",
     "default_popup": "./popup.html"
+    },
+    "browser_specific_settings": {
+      "gecko": {
+        "update_url": "https://raw.githubusercontent.com/tylerwolf35/tylerwolf35.github.io/main/extension/updates.json"
+      }
     }
 }
